src/app/help/help.component.scss
section {
    padding: 30px 50px;
}
mat-icon.category {
    margin: 0;
    width: 24px;
    height: auto;
    line-height: 24px;
}
mat-card a {
    color: inherit;
    text-decoration: none;
}
h3 {
    margin-bottom: 10px;
    font-size: 18px;
    line-height: 20px;
}
h4 {
    margin: 0 0 0 5px;
    font-size: 16px;
}
div.settingsRow {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
mat-card.settingsItem {
    display: flex;
    margin: 0 20px 20px 0;
    width: 250px;
    height: 200px;
    border: 2px solid var(--rmm-bg-tertiary);
    padding: 20px;
}
mat-card.settingsItem mat-icon {
    margin-right: 5px;
    width: 26px;
    height: auto;
    line-height: 14px;
}
div.divider {
    clear: both;
    height: 20px;
}

